organized the grid design

--- a/index.html
+++ b/index.html
@@ -48,7 +48,22 @@
     </nav>
   </header>
   <main>
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-8">col-</div>
+        <div class="col-md-4">col-4</div>
+        
+      </div>
+      <div class="row">
+        <div class="col-4">col-4</div>
+        <div class="col-4">col-4</div>
+      </div>
+      <div class="row">
+        <div class="col-4">col-4</div>
+        <div class="col-4">col-4</div>
+        <div class="col-4">col-4</div>
+      </div>
+    </div>
 
   </main>
     <!-- End navigation bar -->
