--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!-- Navigation bar -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white m-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="/assets/images/logo.svg" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,20 +49,23 @@
   </header>
   <main>
     <div class="container">
-      <div class="row">
-        <div class="col-8">col-</div>
-        <div class="col-md-4">col-4</div>
-        
+
+      <div class="row m-2">
+        <div class="col-8 grid1">col-8</div>
+        <div class="col-md-4 grid2">col-4</div> 
       </div>
-      <div class="row">
+
+      <div class="row m-2 mgn1">
+        <div class="col-4">col-4</div>
+        <div class="col-4">col-4</div> 
+      </div>
+
+      <div class="row m-2 grid4">
+        <div class="col-4">col-4</div>
         <div class="col-4">col-4</div>
         <div class="col-4">col-4</div>
       </div>
-      <div class="row">
-        <div class="col-4">col-4</div>
-        <div class="col-4">col-4</div>
-        <div class="col-4">col-4</div>
-      </div>
+
     </div>
 
   </main>
