--- a/index.html
+++ b/index.html
@@ -57,21 +57,27 @@
           <p class="p-title">
             Hydrogen VS Electric Cars
           </p>
-          Will hydrogen-fueled cars ever catch up to EVs?
+          <p class="semi-title">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </p>
         </p> 
 <hr size="3">
       <p>
         <p class="p-title">
-          What are the possible adverse effects of on-demand AI image generation?
+          The Downsides of Al Artistry
         </p> 
-         The Downsides of AI Artistry         
+        <p class="semi-title">
+          What are the possible adverse effects of on-demand Al image generation?        
+        </p>
       </p>
       <hr size="3">
         <p>
           <p class="p-title">
             Is VC Funding Drying Up?
           </p>
-          Private funding by VC firms is down 50% YOY. We take a look at what that means.
+          <p class="semi-title">
+            e funding by VC firms is down 50% YOY. We take a look at what that means.
+          </p>
         </p>
       </div>
       
@@ -94,45 +100,39 @@
     </div>
   </main>
   <footer>
+<div class="d-flex">
+
+<div class="d-flex hold-sml-imgs">
+<img class="smaller-images" src="/assets/images/image-retro-pcs.jpg" alt="">
+<div>
+  <p>01</p>
+  <h3>Reviving Retro PCs</h3>
+  <p>What happens when old PCs are given modern upgrades?</p>
+  
+</div>
+</div>
+
+<div class="d-flex hold-sml-imgs">
+  <img class="smaller-images" src="/assets/images/image-top-laptops.jpg "alt="">
+  <div>
+    <p>02</p>
+    <h3>Top 10 Laptops of 2022</h3>
+    <p>Our best picks for various needs and budgets.</p> 
+  </div> 
+</div>
+
+<div class="d-flex hold-sml-imgs">
+  <img class="smaller-images" src="/assets/images/image-gaming-growth.jpg" alt="">
+  <div>
+    <p>03</p>
+    <h3>The Growth of Gaming</h3>
+    <p>How the pandemic has sparked fresh opportunities.</p>
     
+  </div>
+</div>
+
+</div>
   </footer>
-    <!-- End navigation bar -->
-
-  <!-- Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities. -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
