--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <div class="d-flex hold-sml-imgs">
 <img class="smaller-images" src="/assets/images/image-retro-pcs.jpg" alt="">
-<div>
+<div class="hold-subtext">
   <p>01</p>
   <h3>Reviving Retro PCs</h3>
   <p>What happens when old PCs are given modern upgrades?</p>
@@ -114,7 +114,7 @@
 
 <div class="d-flex hold-sml-imgs">
   <img class="smaller-images" src="/assets/images/image-top-laptops.jpg "alt="">
-  <div>
+  <div class="hold-subtext">
     <p>02</p>
     <h3>Top 10 Laptops of 2022</h3>
     <p>Our best picks for various needs and budgets.</p> 
@@ -123,7 +123,7 @@
 
 <div class="d-flex hold-sml-imgs">
   <img class="smaller-images" src="/assets/images/image-gaming-growth.jpg" alt="">
-  <div>
+  <div class="hold-subtext">
     <p>03</p>
     <h3>The Growth of Gaming</h3>
     <p>How the pandemic has sparked fresh opportunities.</p>
