--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/style.css" type="text/css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -26,7 +26,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" id="nav-itens2"aria-current="page" href="#">Home</a>
             </li>
@@ -84,7 +84,7 @@
       
       
     </div>
-    <div class="d-flex">
+    <div  class="d-flex">
       <div id="hold-readmore" class="d-flex">
         <div class="d-flex" id="read-more-box">  
           <h1>The Bright Future of Web 3.0?</h1>
@@ -101,7 +101,6 @@
   </main>
   <footer>
 <div class="d-flex">
-
 <div class="d-flex hold-sml-imgs">
 <img class="smaller-images" src="/assets/images/image-retro-pcs.jpg" alt="">
 <div class="hold-subtext">
