Doing next breakpoint

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
   <main>
     <div id="hold-main" class=" d-flex">
-      <div  class=""><img src="/assets/images/image-web-3-desktop.jpg" class="" id="first-img" alt=""></div>
+      <div  id="imagem-fundo"></div>
       <div class="ms-4 pt-4" id="news"> 
         <h2>New</h2> 
 
