still doing the breakpois 1200px

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       
       
     </div>
-    <div  class="d-flex">
+    <div id="box-readmore" class="d-flex">
       <div id="hold-readmore" class="d-flex">
         <div class="d-flex" id="read-more-box">  
           <h1>The Bright Future of Web 3.0?</h1>
